# serde-query

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  flake.nix
serde-query/: Cargo.toml
serde-query-core/: Cargo.toml
serde-query-core/src/: lib.rs  main.rs  node.rs  parse_input.rs  parse_query.rs  parser.rs  query.rs
serde-query-core/src/tests/: conflicting_accept.rs  empty.rs  generate_basic.rs  mod.rs
serde-query-core/tests/: generate_basic.rs
serde-query-derive/: Cargo.toml
serde-query-derive/src/: lib.rs  parse_query.rs
serde-query-derive/tests/: tests.rs
serde-query/examples/: github.rs  github_query.rs
serde-query/src/: lib.rs
serde-query/tests/: commits.json  compile-tests.rs  field_name.rs  index.rs  input.json  list_commits.rs  memory_usage.rs  test_error_example.rs  test_errors.rs  test_simple.rs
serde-query/tests/compile-fail/: conflicting_accept.rs  conflicting_accept.stderr  conflicting_query.rs  conflicting_query.stderr  query_parse_error.rs  query_parse_error.stderr
serde-query/tests/compile-pass/: empty.rs  issue-2.rs  issue-7.rs  quoted_identifiers.rs
