[package]
name = "serde-query-core"
version = "0.2.0-alpha0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.51"
quote = "1.0.23"
syn = { version = "1.0.107", default-features = false }

[dev-dependencies]
serde = "1.0.152"
serde_json = "1.0.92"
