[package]
name = "serde-query-core"
version = "0.2.0-alpha0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logos = "0.12.1"
proc-macro-error = "1.0.4"
proc-macro2 = "1.0.51"
quote = "1.0.23"
syn = "1.0.107"

[dev-dependencies]
k9 = "0.11.6"
prettyplease = "0.1.23"
serde = "1.0.152"
serde_json = "1.0.92"
