[package]
name = "serde-query-core"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logos = "0.12.1"
proc-macro-error = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }

[dev-dependencies]
k9 = "0.11.6"
prettyplease = "0.1.23"
serde = "1.0.152"
serde_json = "1.0.92"
