[package]
name = "serde-query-derive"
version = "0.1.3"
authors = ["pandaman64 <kointosudesuyo@infoseek.jp>"]
edition = "2018"
description = "Serde-compatible streaming data-query language with a jq-like syntax"
license = "MIT OR Apache-2.0"
repository = "https://github.com/pandaman64/serde-query/"
keywords = ["serde"]
categories = ["encoding"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = "1.0.39"
quote = "1.0.7"
proc-macro2 = "1.0.19"
proc-macro-error = "1.0.4"
logos = "0.12.0"
