[package]
name = "serde-query-derive"
version = "0.2.0-alpha0"
authors = ["pandaman64 <kointosudesuyo@infoseek.jp>"]
edition = "2018"
description = "Serde-compatible streaming data-query language with a jq-like syntax"
license = "MIT OR Apache-2.0"
repository = "https://github.com/pandaman64/serde-query/"
keywords = ["serde"]
categories = ["encoding"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { workspace = true }
quote = { workspace = true }
proc-macro-error = { workspace = true }

[dependencies.serde-query-core]
version = "0.2.0-alpha0"
path = "../serde-query-core"
