[package]
name = "serde-query"
version = "0.1.0"
authors = ["pandaman64 <kointosudesuyo@infoseek.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.115"
serde-query-derive = { path = "../serde-query-derive" }

[dev-dependencies]
serde_json = "1.0.57"
