[package]
name = "serde-query"
version = "0.1.0"
authors = ["pandaman64 <kointosudesuyo@infoseek.jp>"]
edition = "2018"
description = "Serde-compatible streaming data-query language with a jq-like syntax"
license = "MIT OR Apache-2.0"
repository = "https://github.com/pandaman64/serde-query/"
keywords = ["serde"]
categories = ["encoding"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["derive"]

derive = ["serde-query-derive"]

[dependencies]
serde = "1.0.115"

[dependencies.serde-query-derive]
version = "0.1.0"
path = "../serde-query-derive"
optional = true

[dev-dependencies]
serde_json = "1.0.57"
