[package]
name = "serde-query"
version = "0.1.3"
authors = ["pandaman64 <kointosudesuyo@infoseek.jp>"]
edition = "2018"
description = "Serde-compatible streaming data-query language with a jq-like syntax"
license = "MIT OR Apache-2.0"
repository = "https://github.com/pandaman64/serde-query/"
keywords = ["serde"]
categories = ["encoding"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["derive"]

derive = ["serde-query-derive"]

[dependencies]
serde = "1.0.115"

[dependencies.serde-query-derive]
version = "0.1.3"
path = "../serde-query-derive"
optional = true

[dev-dependencies]
serde_json = "1.0.57"
ureq = "1.4.0"

# for observing memory usage
[target.'cfg(not(target_env = "msvc"))'.dev-dependencies]
jemallocator = { version = "0.3.2", features = ["stats"] }
jemalloc-ctl = "0.3.3"